@@ -1,3 +1,13 @@
+2015-09-04  Csaba Osztrogonác  <ossy@webkit.org>
+
+        [ARM] Fix the ARM Traditional build after r189288
+        https://bugs.webkit.org/show_bug.cgi?id=148792
+
+        Reviewed by Zoltan Herczeg.
+
+        * assembler/MacroAssemblerARM.h: Make repatchCall public similar to changes in r189288.
+        (JSC::MacroAssemblerARM::repatchCall):
+
 2015-09-03 Aleksandr Skachkov   <gskachkov@gmail.com>
 
         [ES6] Implement ES6 arrow function syntax. Prototype of arrow function should be undefined
